# DINO_PCB_Segmentation

./: .gitignore  README.md  data_prep.ipynb  inference.ipynb  main.py  pyproject.toml  requirements.txt  test_inference.py  training.ipynb  training.py
public-code/preperation/: createLabels.py
