[project]
name = "dino-pcb-segmentation"
version = "0.1.0"
description = "PCB Defect Segmentation using DINO and U-Net"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"}
]

dependencies = [
    "albumentations>=1.4.0",
    "ipykernel>=6.29.0",  
    "matplotlib>=3.8.0",
    "notebook>=7.0.0",
    "numpy>=1.26.0",     
    "opencv-python>=4.9.0",
    "pandas>=2.2.0",
    "pillow>=10.2.0",
    "scipy>=1.12.0",
    "segmentation-models-pytorch>=0.3.3",
    "timm>=0.9.12",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#gpu 안잡힐때
# [[tool.uv.index]]
# name = "pytorch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# explicit = true